# shorts-creator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/commands/: review.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  image.yml  k8s-generator-diff.yml  k8s-smoke.yml
deploy/argo/: cronworkflow.yaml
deploy/host/: oauth-production.md  platform-audit.md  power-policy.md  shorts-batch.service  shorts-batch.timer  soak-runbook.md
deploy/obs/: alertmanager.yml  alerts.yml  comfyui-queue-exporter.md  grafana-dashboard.json  nvidia-smi-exporter.md  prometheus.yml
docs/: ARCHITECTURE.md  DESIGN.md  DEV-WORKFLOW.md  OPTIONS.md  POC.md  REVIEW.md  STRATEGY.md
docs/decisions/: 0001-lightened-runtime-architecture.md  0002-recency-and-novelty-ledger.md  0003-resilience-concurrency-observability.md  0004-poc-commercial-posture-and-account-safety.md  (+15 more)
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
schemas/: assets.schema.json  batch.schema.json  creative_qc.schema.json  data.schema.json  feature_record.schema.json  format.schema.json  job.schema.json  layout.schema.json  posts.schema.json  profile.schema.json  provenance.schema.json  qc.schema.json  render_manifest.schema.json  script.schema.json  vision.schema.json
scripts/: down.sh  trigger.sh  up.sh
shared/: cache.py  config.py  ctx.py  exitcodes.py  hashing.py  host_client.py  logging.py  runner.py  schema.py  stage.py  timing.py
shorts/: audit.py  calibrate.py  review.py  run_batch.py  stage.py
shorts_creator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stages/: registry.py
tests/: conftest.py  test_adapters_comfy.py  test_adapters_fakes.py  test_adapters_real.py  test_ass.py  test_audio_defect.py  test_audit_report.py  test_baselines.py  test_batch_plan.py  test_bind.py  test_budgets.py  test_build_job.py  test_business_slice_offline.py  test_cache.py  test_cache_evict.py  test_calibrate_cli.py  test_calibration_anchor.py  test_caption.py  test_clip.py  test_config.py  test_creative_qc.py  test_ctx.py  test_data_schema.py  test_dedup.py  test_distribution_base.py  test_encode.py  test_executor.py  test_exitcodes.py  test_fallback.py  test_ffmpeg.py  test_finishing.py  test_format_layouts_validate.py  test_formats_registry.py  test_full_dag_offline.py  test_gc.py  test_gpu.py  test_grounding.py  test_hashing.py  test_heartbeat.py  test_held_status.py  (+75 more)
(+193 files in other folders)
