[project]
name = "shorts-creator"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4.21"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
packages = ["shared", "stages"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
