[project]
name = "shorts-creator"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4.21"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort (review-driven: make ruff functional in CI)

[tool.setuptools.packages.find]
# review-driven: auto-discover so shorts/ (M4) isn't silently skipped by a static list; tests excluded
where = ["."]
include = ["shared*", "stages*", "shorts*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
